--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -35,7 +35,11 @@ border-color: rgb(27, 160, 27);
 
 }
 
-  
+  .construction{
+  margin: auto;
+  position: relative;
+  }
+
 .title {
     margin-left: 30px;
     position: relative;
