--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -269,7 +269,7 @@ margin-right: 1rem;
 h1{
     margin: auto;
 padding-top: 2.5rem;
-    font-family: 'Goozette';
+    font-family: 'goozetteregular';
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
@@ -316,7 +316,7 @@ line-height: 1.3rem;
 }
 
 sub{
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
 font-weight: 500;
 text-align: left;
@@ -341,7 +341,7 @@ font-size: 20px;
     padding-top: 1.5rem;
     position: relative;
     float: left;
-    font-family: 'Goozette';
+    font-family: 'goozetteregular';
     font-style: normal;
     font-weight: 400;
     font-size: 2rem;
@@ -364,7 +364,7 @@ height: 14vh;
 #header-text-gardens {
 margin: auto;
 position: relative;
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-size: 1.8rem;
 line-height: 1rem;
@@ -438,7 +438,7 @@ background: #000000;
     height: 100%;
     padding: 3px;
     margin: auto;
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'jetbrains_monoregular', monospace;
      font-style: normal;
       text-align: left;
       font-weight: 400;
@@ -468,7 +468,7 @@ width: 100vw;
 }
 
 .marquee-bottom p{
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-weight: 400;  
 color: #ffffff;
@@ -583,7 +583,7 @@ height: 25vh;
     padding-top: 4rem;
     position: relative;
     text-align: center;
-    font-family: 'Goozette', sans-serif;
+    font-family: 'goozetteregular', sans-serif;
     font-size: 1.5rem;
     line-height: 1.7rem;
     color: #000000;
@@ -612,7 +612,7 @@ margin-top: 1.2rem;
     display: block;
     font-size: 9px;
     text-align: left;
-    font-family: 'JetBrains Mono', monospace, bold;
+    font-family: 'jetbrains_monoregular', monospace, bold;
     position: relative;
     font-weight: 800;
     margin: auto;
@@ -731,11 +731,11 @@ margin: auto;
     padding-top: 0.5rem;
     text-transform: uppercase;
     font-size: 9.5px;
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'jetbrains_monoregular', monospace;
 }
 
 .learnmore{
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'jetbrains_monoregular', monospace;
     font-size: 10px;
     position: relative;
     padding-left: 1rem;
@@ -813,7 +813,7 @@ font-size: 9px;
 }
 /* interview landing */
 .interview-1, .interview-2{
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-weight: 400;  
 color: #000000;
