--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'creato_displayblack_italic';
-    src: url('creatodisplay-blackitalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-blackitalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-blackitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-blackitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -12,8 +12,8 @@
 
 @font-face {
     font-family: 'creato_displaybold_italic';
-    src: url('creatodisplay-bolditalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-bolditalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-bolditalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-bolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -24,8 +24,8 @@
 
 @font-face {
     font-family: 'creato_displayXBdIt';
-    src: url('creatodisplay-extrabolditalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-extrabolditalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-extrabolditalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-extrabolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -36,20 +36,17 @@
 
 @font-face {
     font-family: 'creato_displaylight_italic';
-    src: url('creatodisplay-lightitalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-lightitalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-lightitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-lightitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 
-
-
-
 @font-face {
     font-family: 'creato_displaymedium_italic';
-    src: url('creatodisplay-mediumitalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-mediumitalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-mediumitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-mediumitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -60,8 +57,8 @@
 
 @font-face {
     font-family: 'creato_displayitalic';
-    src: url('creatodisplay-regularitalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-regularitalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-regularitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-regularitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -72,8 +69,8 @@
 
 @font-face {
     font-family: 'creato_displaythin_italic';
-    src: url('creatodisplay-thinitalic-webfont.woff2') format('woff2'),
-         url('creatodisplay-thinitalic-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-thinitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-thinitalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -84,8 +81,8 @@
 
 @font-face {
     font-family: 'creato_displayblack';
-    src: url('creatodisplay-black-webfont.woff2') format('woff2'),
-         url('creatodisplay-black-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-black-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -96,8 +93,8 @@
 
 @font-face {
     font-family: 'creato_displaybold';
-    src: url('creatodisplay-bold-webfont.woff2') format('woff2'),
-         url('creatodisplay-bold-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-bold-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -108,8 +105,8 @@
 
 @font-face {
     font-family: 'creato_displayextrabold';
-    src: url('creatodisplay-extrabold-webfont.woff2') format('woff2'),
-         url('creatodisplay-extrabold-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-extrabold-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-extrabold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -120,8 +117,8 @@
 
 @font-face {
     font-family: 'creato_displaylight';
-    src: url('creatodisplay-light-webfont.woff2') format('woff2'),
-         url('creatodisplay-light-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-light-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -132,12 +129,43 @@
 
 @font-face {
     font-family: 'creato_displaymedium';
-    src: url('creatodisplay-medium-webfont.woff2') format('woff2'),
-         url('creatodisplay-medium-webfont.woff') format('woff');
+    src: url('fonts/creatodisplay-medium-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'goozetteregular';
+    src: url('fonts/goozette-webfont.woff2') format('woff2'),
+         url('fonts/goozette-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'jetbrains_monoitalic';
+    src: url('fonts/jetbrainsmono-italicwght-webfont.woff2') format('woff2'),
+         url('fonts/jetbrainsmono-italicwght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'jetbrains_monoregular';
+    src: url('fonts/jetbrainsmonowght-webfont.woff2') format('woff2'),
+         url('fonts/jetbrainsmonowght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 *{     margin: 0;
     }
