--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -271,7 +271,7 @@ h1{
 padding-top: 2.5rem;
     font-family: 'goozetteregular';
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 25px;
     line-height: 2rem;
 }
@@ -279,14 +279,14 @@ padding-top: 2.5rem;
 h2 {
 font-family: 'Creato Display Medium', sans-serif;
 font-style: normal;
-font-weight: 400;
+font-weight: normal;
 font-size: 25px;
 }
 
 p{
 font-family: 'Creato Display', sans-serif;
 font-style: normal;
-font-weight: 400;
+font-weight: normal;
 text-align: left;
 padding-bottom: 5px;
 font-size: 15px;
@@ -308,7 +308,7 @@ line-height: 1.3rem;
 i{
     font-family: 'Creato Display', sans-serif;
 font-style: italic;
-font-weight: 400;
+font-weight: normal;
 text-align: left;
 padding-bottom: 5px;
 font-size: 15px;
@@ -318,7 +318,7 @@ line-height: 1.3rem;
 sub{
 font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
-font-weight: 500;
+font-weight: normal;
 text-align: left;
 font-size: 10px; 
 line-height: 0.2rem;
@@ -330,7 +330,7 @@ font-family: 'Creato Display', sans-serif;
 font-style: normal;
 text-align: left;
 padding-bottom: 5px;
-font-weight: 400;
+font-weight: normal;
 font-size: 20px;
 }
 
@@ -343,7 +343,7 @@ font-size: 20px;
     float: left;
     font-family: 'goozetteregular';
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 2rem;
     line-height: 101%;
     color: rgb(7, 7, 7);
@@ -441,7 +441,7 @@ background: #000000;
     font-family: 'jetbrains_monoregular', monospace;
      font-style: normal;
       text-align: left;
-      font-weight: 400;
+      font-weight: normal;
       font-size: 10px; 
   white-space: nowrap;
   will-change: transform;
@@ -470,7 +470,7 @@ width: 100vw;
 .marquee-bottom p{
 font-family: 'goozetteregular';
 font-style: normal;
-font-weight: 400;  
+font-weight: normal;  
 color: #ffffff;
 font-size: 20px;
 padding: 0.8rem;
@@ -704,7 +704,7 @@ flex-wrap: wrap;
 .filterDiv p{
     font-size: 1rem;
     line-height: 1.3rem;
-   font-weight: 500;
+   font-weight: normal;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0.5rem;
@@ -815,7 +815,7 @@ font-size: 9px;
 .interview-1, .interview-2{
 font-family: 'goozetteregular';
 font-style: normal;
-font-weight: 400;  
+font-weight: normal;  
 color: #000000;
 font-size: 20px;
 padding-top: 5rem;
@@ -841,7 +841,7 @@ width: 70vw;
 .bio-1{
     font-family: 'Xanh Mono', monospace;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: normal;
     padding-bottom: 10rem;
     line-height: 1.4rem;
     letter-spacing: -0.3px;
@@ -967,7 +967,7 @@ line-height: 0.7rem;
             font-style: italic;
             text-align: left;
             font-size: 15px;
-            font-weight: 500;
+            font-weight: normal;
             padding-top: 0.5rem;
             padding-bottom: 0.5rem;
             padding-right: 2rem;
