--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -182,7 +182,8 @@ body{
     margin-left: 1.2rem;
     margin-right: 1.2rem;
     margin-bottom: 2rem;
-    max-width: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 /* unvisited link */
