--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -459,9 +459,9 @@ background: #000000;
 .marquee-bottom{
 display: block;
 box-sizing: border-box;
-position: fixed;
+position: absolute;
 bottom: 0;
-    margin-bottom: 0;
+margin-bottom: 0;
 background: black;
 overflow: hidden;
 margin: auto;
@@ -470,9 +470,9 @@ width: 100vw;
 }
 
 .marquee-bottom p{
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
-font-weight: 400;  
+font-weight: normal;  
 color: #ffffff;
 font-size: 20px;
 padding: 0.8rem;
