--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -461,7 +461,7 @@ display: block;
 box-sizing: border-box;
 position: absolute;
 bottom: 0;
-margin-bottom: 0;
+margin-top: 100vh;
 background: black;
 overflow: hidden;
 left: 0;
