--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -459,7 +459,7 @@ background: #000000;
 .marquee-bottom{
 display: block;
 box-sizing: border-box;
-position: absolute;
+position: fixed;
 bottom: 0;
 margin-top: 100vh;
 background: black;
