--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -378,7 +378,7 @@ color: white;
 .mobile-menu-landing{
     position: fixed;
     margin: auto;
-    top: -1px;
+    top: 0;
     right: -1px;
 display: inline-block;
 width: 4.5rem;
@@ -392,7 +392,7 @@ border:#000000 1px solid;
 .mobile-menu-pages{
     position: fixed;
     margin: auto;
-    top: -1px;
+    top: 0;
     right: 0;
 display: block;
 width: 4.5rem;
