--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -569,7 +569,7 @@ height: 25vh;
 .about-mobile{
     display: block;
     width: 40vw;
-    height: 20rem;
+    height: 25vh;
     position: relative;
     margin: auto;
     padding-bottom: 5px;
