--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -337,12 +337,16 @@ font-size: 20px;
 
 /* GENERATIVE HEADER ANIMATIONS*/
 .header{
+    margin: auto;
+    top: 0;
+    position: fixed;
 display: block;
     box-sizing: border-box;
     width: 100vw;
     background-colour: #ffff;
     height: fit-content;
 }
+
 .title {
     margin: auto;
     position: fixed;
