--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -343,7 +343,7 @@ font-size: 20px;
 display: block;
     box-sizing: border-box;
     width: 100vw;
-    background-colour: #ffff;
+    background-colour: white;
     height: fit-content;
 }
 
