--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -414,8 +414,7 @@ z-index: 2;
 
 
 #bar1 {
-    top: 37%;
-    margin-left: 35%;
+   margin: auto;
     position: relative; 
     width: 25px;
     height: 1.5px;
@@ -423,8 +422,7 @@ z-index: 2;
 }
 
 #bar2 {
-    top: 37%;
-    margin-left: 35%;
+   margin: auto;
     position: relative; 
     width: 25px;
     height: 1.5px;
