--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -414,7 +414,7 @@ z-index: 2;
 
 
 #bar1 {
-    padding-top: 1.3rem
+    padding-top: 1.3rem;
    margin: auto;
     position: relative; 
     width: 25px;
@@ -423,6 +423,7 @@ z-index: 2;
 }
 
 #bar2 {
+        padding-top: 1.3rem;
    margin: auto;
     position: relative; 
     width: 25px;
