--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -416,7 +416,7 @@ z-index: 2;
 #bar1 {
     margin-top: 5rem;
         margin-left: 2rem;
-    position: absolute; 
+    position: relative; 
     width: 25px;
     height: 1.5px;
     background-color: rgb(0, 0, 0);
@@ -425,7 +425,7 @@ z-index: 2;
 #bar2 {
     margin-top: 5rem;
     margin-left: 2rem;
-    position: absolute; 
+    position: relative; 
     width: 25px;
     height: 1.5px;
     background-color: rgb(0, 0, 0);
