--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -414,7 +414,7 @@ z-index: 2;
 
 
 #bar1 {
-    margin-top: 2rem;
+    top: 2rem;
         margin-left: 2rem;
     position: absolute; 
     width: 25px;
@@ -423,7 +423,7 @@ z-index: 2;
 }
 
 #bar2 {
-    margin-top: 2rem;
+    top: 2rem;
     margin-left: 2rem;
     position: absolute; 
     width: 25px;
