--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -172,18 +172,18 @@
 
 html{
 margin: 0;
-max-width: 100vw;
+min-width: 100vw;
 }
 
 body{
-    max-width: 100vw;
+    min-width: 100vw;
 }
 .wrapper{
     margin-left: 1.2rem;
     margin-right: 1.2rem;
     margin-bottom: 2rem;
-    max-width: 100vw;
-    max-height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 }
 
 /* unvisited link */
@@ -203,67 +203,6 @@ a:hover {
     color: rgb(0, 190, 57);
 border-color: rgb(27, 160, 27);
     text-decoration: none;
-  }
-
-.btn {
-    border: none;
-    outline: none;
-    background-color: #ffffff;
-    font-family: 'Xanh Mono', monospace;
-font-size: 15px;
-line-height: 19px;
-position: relative;    
-border: 1px solid #000000;
-border-radius: 2rem;
-padding: 10px;
-margin-top: 0.5rem ;
-margin-right: 1rem;
-  }
-
-  .btn.active{
-    border: none;
-    outline: none;
-    background-color: #ffffff;
-    font-family: 'Xanh Mono', monospace;
-font-size: 15px;
-line-height: 19px;
-position: relative;    
-border: 1px solid #0008CE;
-border-radius: 2rem;
-padding: 10px;
-margin-top: 0.5rem ;
-margin-right: 1rem;
-    color: #0008CE;
-  }
-
-/*.btn1.active:active {
-    color: #0008CE;
-    border-color: #0008CE;
-  }
-
-  .btn2:active {
-    color: #EF671A;
-    border-color: #EF671A;
-  }
-
-  .btn3:active {
-    color: #00973C;
-    border-color: #00973C;
-  }
-
-  .btn4:active {
-    color: #FD54A5;
-    border-color: #FD54A5;
-  }
-
-  .btn5:active {
-    color: #9747FF;
-    border-color: #9747FF;
-  }
-
-  .btn6:active {
-    color: #FFB905;
-    border-color: #FFB905;
   }
 
 /* main styling */
@@ -412,10 +351,32 @@ z-index: 2;
 }
 
 
+
+#bar1 {
+    top: 37%;
+    margin-left: 35%;
+    position: relative; 
+    width: 25px;
+    height: 1.5px;
+    background-color: rgb(0, 0, 0);
+}
+
+#bar2 {
+    top: 37%;
+    margin-left: 35%;
+    position: relative; 
+    width: 25px;
+    height: 1.5px;
+    background-color: rgb(0, 0, 0);
+    transform: rotate(90deg);
+}
+
+
+
 .marquee {
     height: 25px;
     position: fixed;
-margin-top: 9vh; 
+margin-top: 12vh; 
 left: 0;   
 background: #000000;
     color: #ffffff;
@@ -491,7 +452,6 @@ width: 100vw;
 height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
-    z-index: -1;
 }
 
 .title-1 {
@@ -641,6 +601,7 @@ margin-top: 1.2rem;
     padding-bottom: 2rem;
     font-family: 'Creato Display', sans-serif;
     font-size: 16px;
+    width: 90vw;
 }
 
 .description-about{
@@ -655,7 +616,9 @@ margin-top: 1.2rem;
 .disclaimer {
     position: relative;
     margin: auto;
-    }
+    width: 90vw;
+margin-left: 0.2rem; 
+   }
     
     .disclaimer sub{
         position: relative;
@@ -677,6 +640,7 @@ flex-wrap: wrap;
     position: relative;
     width: 100vw;
     justify-content: space-between;
+    padding-bottom: 5rem;
     
 }
 
@@ -686,12 +650,47 @@ flex-wrap: wrap;
     background-color: rgb(255, 255, 255);
     border: #000000 solid 1px;
     border-radius: 2rem;
-    box-sizing: border-box;
-    width: 90vw;
-    height: 23rem;
+    width: 24rem;
+    height: 27rem;
     margin-bottom: 1rem;
     margin-right: 1rem;
+    display: none;
 }
+
+.show {
+    display: block;
+  }
+
+.btn {
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+    font-family: 'Xanh Mono', monospace;
+font-size: 15px;
+line-height: 19px;
+position: relative;    
+border: 1px solid #000000;
+border-radius: 2rem;
+padding: 10px;
+margin-top: 0.5rem ;
+margin-right: 1rem;
+  }
+
+  .btn.active{
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+    font-family: 'Xanh Mono', monospace;
+font-size: 15px;
+line-height: 19px;
+position: relative;    
+border: 1px solid #0008CE;
+border-radius: 2rem;
+padding: 10px;
+margin-top: 0.5rem ;
+margin-right: 1rem;
+    color: #0008CE;
+  }
 
 .filterDiv p{
     font-size: 1rem;
@@ -772,6 +771,7 @@ font-size: 9px;
     box-sizing: border-box;
     position: fixed;
     bottom: 0;
+    left: -1px;
     border:#000000 1px solid;
     margin: auto;
     width: 100vw;
@@ -980,3 +980,129 @@ line-height: 0.7rem;
         margin-right: 0.5rem;
         width: fit-content;
           }
+
+
+/*grants*/
+.accordion {
+    cursor: pointer;
+    padding: 1rem;
+    width: 100%;
+    background-color: #FFEAF9;
+    border: 1px solid #000000;
+    text-align: left;
+    outline: none;
+    transition: 0.4s;
+  }
+
+.accordion p{
+  font-family: 'goozetteregular';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 20px;
+    position: relative;
+    padding-top: 0.5rem;
+}
+  
+  .active, .accordion:hover{
+    background-color: #000000;
+    color: #ffffff;
+  }
+  
+  .panel {
+max-height: 0;
+    display: none;
+    transition: max-height 0.2s ease-out;
+  }
+
+  .panel-text{
+    padding-top: 2rem;
+    padding-left: 0.5rem;
+
+  }
+
+  .panel-text h2{
+    font-size: 18px;
+    }
+
+  .panel-text p{
+font-family: 'Creato Display', sans-serif;  
+font-size: 15px;
+}
+  .accordion:active, .panel{
+    display: block;
+overflow: hidden;
+  }
+
+  .buds{
+    position: relative;
+top: -10rem;
+}
+
+.buds p{
+width: 90vw;
+}
+
+
+.image{
+    display: block;
+    box-sizing: border-box;
+position: relative;
+left: -11rem;
+}
+
+#zines{
+    display: inline-block;
+    position: relative;
+    left: -12.5rem;
+    top: -5rem;
+
+scale: 50%;
+}
+
+.experience{
+position: relative;
+top: -13rem;
+}
+
+.experience-2{
+    position: relative;
+    top: -7rem;
+    }
+
+    .experience-2 p{
+        font-family: 'goozetteregular';
+        font-style: normal;
+        font-weight: normal;  
+        color: #000000;
+        font-size: 20px;
+        line-height: 1.5rem;
+        width: 70vw;
+        }
+
+.experience p{
+    font-family: 'goozetteregular';
+    font-style: normal;
+    font-weight: normal;  
+    color: #000000;
+    font-size: 20px;
+    line-height: 1.5rem;
+    width: 70vw;
+}
+
+.line-2{
+    position: absolute;
+   margin-top: 1rem;
+    left: 0;
+    width: 100vw;
+    height: 1px;
+    background-color: #000000
+}
+
+.line-3{
+    position: absolute;
+   top: 38rem;
+    left: 0;
+    width: 100vw;
+    height: 1px;
+    background-color: #000000
+}
