--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -173,11 +173,13 @@
 html{
 margin: 0;
 min-width: 100vw;
+min-height: 100vh;
 overflow: auto;
 }
 
 body{
     min-width: 100vw;
+    min-height: 100vh;
 }
 .wrapper{
     margin-left: 1.2rem;
@@ -377,7 +379,7 @@ z-index: 2;
 .marquee {
     height: 25px;
     position: fixed;
-margin-top: 12vh; 
+margin-top: 14vh; 
 left: 0;   
 background: #000000;
     color: #ffffff;
@@ -453,6 +455,7 @@ width: 100vw;
 height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
+        overflow-y: auto;
 }
 
 .title-1 {
