--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -174,7 +174,7 @@ html{
 margin: 0;
 min-width: 100vw;
 min-height: 100vh;
-overflow-y: visible;
+overflow-y: scroll;
 }
 
 body{
@@ -455,7 +455,7 @@ width: 100vw;
 height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
-        overflow-y: visible;
+overflow-y: scroll;
 }
 
 .title-1 {
