--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -174,12 +174,13 @@ html{
 margin: 0;
 min-width: 100vw;
 min-height: 100vh;
-overflow-y: scroll;
+overflow-y: visible;
 }
 
 body{
     min-width: 100vw;
     min-height: 100vh;
+    overflow-y: visible;
 }
 .wrapper{
     margin-left: 1.2rem;
