--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -454,10 +454,9 @@ position: relative;
    top: 18vh;
 width: 100vw;
     height: 100vh;
-height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
-overflow-y: scroll;
+overflow-y: visible;
 }
 
 .title-1 {
