--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -452,9 +452,8 @@ position: absolute;
    right: 0;
    top: 18vh;
 width: 100vw;
-    height: 100vh;
 background-color: rgb(251, 253, 252);
-overflow: visible;
+overflow: scroll;
 }
 
 .title-1 {
