--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -175,7 +175,7 @@ margin: 0;
 min-width: 100vw;
     max-width: 100vw;
 max-height: 100vh;
-overflow: scroll;
+overflow-x: hidden;
 }
 
 body{
@@ -187,7 +187,7 @@ body{
     margin-right: 1.2rem;
     margin-bottom: 2rem;
     min-width: 100vw;
-    overflow: visible;
+    overflow-y: visible;
 }
 
 /* unvisited link */
