--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -452,7 +452,7 @@ position: absolute;
    right: 0;
    top: 18vh;
 width: 100vw;
-    height: 82vh
+    height: 100vh;
 background-color: rgb(251, 253, 252);
 }
 
