--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -176,10 +176,12 @@ min-width: 100vw;
     max-width: 100vw;
 max-height: 100vh;
 overflow-x: hidden;
+        overflow-y: scroll;
 }
 
 body{
     min-width: 100vw;
+        overflow-y: scroll;
 }
 
 .wrapper{
@@ -187,7 +189,7 @@ body{
     margin-right: 1.2rem;
     margin-bottom: 2rem;
     min-width: 100vw;
-    overflow-y: visible;
+    overflow-y: scroll;
 }
 
 /* unvisited link */
@@ -452,7 +454,7 @@ position: absolute;
    right: 0;
    top: 18vh;
 width: 100vw;
-    height: 100vh;
+    height: 75vh;
 background-color: rgb(251, 253, 252);
 }
 
