--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -446,7 +446,6 @@ white-space: nowrap;
 
 
 .grid{
-    box-sizing: border-box;
     display: grid;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
@@ -454,7 +453,7 @@ position: absolute;
    right: 0;
    top: 18vh;
 width: 100vw;
-    height: 75vh;
+height: 100%;
 background-color: rgb(251, 253, 252);
 }
 
