--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -450,7 +450,7 @@ white-space: nowrap;
     display: grid;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
-position: absolute;
+position: relative;
    right: 0;
    top: 18vh;
 width: 100vw;
