--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -452,9 +452,8 @@ white-space: nowrap;
     grid-template-rows: 25vh 25vh 25vh;
 position: relative;
    right: 0;
-   top: 18vh;
 width: 100vw;
-height: 100%;
+height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow: scroll;
 }
