--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -454,6 +454,7 @@ position: relative;
    right: 0;
 width: 100vw;
 height: 100vh;
+    padding-bottom: 55px;
 background-color: rgb(251, 253, 252);
     overflow: scroll;
 }
