--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -450,8 +450,9 @@ white-space: nowrap;
     display: grid;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
-position: relative;
+position: absolute;
    right: 0;
+    top: 18vh
 width: 100vw;
 height: 100vh;
     padding-bottom: 55px;
