--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -452,7 +452,7 @@ white-space: nowrap;
     grid-template-rows: 25vh 25vh 25vh;
 position: absolute;
    right: 0;
-    top: 18vh
+    top: 18vh;
 width: 100vw;
 height: 100vh;
     padding-bottom: 55px;
