--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -285,7 +285,7 @@ font-size: 20px;
 .header{
     top: 0;
     position: fixed;
-display: block;
+display: inline-block;
     box-sizing: border-box;
     width: 100vw;
     background-color: white;
