--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -362,7 +362,7 @@ z-index: 1;
 
 .marquee {
     height: 25px;
-    position: absolute;
+    position: fixed;
 top: 0; 
 left: 0;   
 background: #000000;
