--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -307,6 +307,8 @@ display: inline-block;
     /* or 97px */
     letter-spacing: 0.055em; 
         z-index: 1;
+    background-color: white;
+    width: 100vw;
     }
 
 .header-text-gardens{
@@ -316,7 +318,9 @@ display: block;
 box-sizing: border-box;
 padding-top: 4rem;
 height: 14vh;
-            z-index: 1;
+z-index: 1;
+     background-color: white;
+    width: 100vw;
 }
 
 
