--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -173,24 +173,19 @@
 html{
 margin: 0;
 min-width: 100vw;
-    max-width: 100vw;
-max-height: 100vh;
-overflow-x: hidden;
-        overflow-y: scroll;
 }
 
 body{
     min-width: 100vw;
-        overflow-y: scroll;
+    overflow-x: hidden;
 }
-
 .wrapper{
     margin-left: 1.2rem;
     margin-right: 1.2rem;
     margin-bottom: 2rem;
     min-width: 100vw;
-    overflow-y: scroll;
-    z-index: -1;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 /* unvisited link */
@@ -283,9 +278,10 @@ font-size: 20px;
 
 /* GENERATIVE HEADER ANIMATIONS*/
 .header{
+    margin: auto;
     top: 0;
     position: fixed;
-display: inline-block;
+display: block;
     box-sizing: border-box;
     width: 100vw;
     background-color: white;
@@ -294,7 +290,6 @@ display: inline-block;
 
 .title {
     margin: auto;
-    top: 2rem;
     padding-top: 1.5rem;
     padding-left: 1.5rem;
     position: fixed;
@@ -307,9 +302,6 @@ display: inline-block;
     color: rgb(7, 7, 7);
     /* or 97px */
     letter-spacing: 0.055em; 
-        z-index: 1;
-    background-color: white;
-    width: 100vw;
     }
 
 .header-text-gardens{
@@ -319,9 +311,6 @@ display: block;
 box-sizing: border-box;
 padding-top: 4rem;
 height: 14vh;
-z-index: 1;
-     background-color: white;
-    width: 100vw;
 }
 
 
@@ -346,7 +335,7 @@ color: white;
 display: inline-block;
 width: 4.5rem;
 height: 14vh;
-z-index: 1;
+z-index: 2;
 border:#000000 1px solid;
 }
 
@@ -360,7 +349,28 @@ border:#000000 1px solid;
 display: block;
 width: 4.5rem;
 height: 5rem;
-z-index: 1;
+z-index: 2;
+}
+
+
+
+#bar1 {
+    top: 37%;
+    margin-left: 35%;
+    position: relative; 
+    width: 25px;
+    height: 1.5px;
+    background-color: rgb(0, 0, 0);
+}
+
+#bar2 {
+    top: 37%;
+    margin-left: 35%;
+    position: relative; 
+    width: 25px;
+    height: 1.5px;
+    background-color: rgb(0, 0, 0);
+    transform: rotate(90deg);
 }
 
 
@@ -368,7 +378,7 @@ z-index: 1;
 .marquee {
     height: 25px;
     position: fixed;
-margin-top: 18vh; 
+margin-top: 12vh; 
 left: 0;   
 background: #000000;
     color: #ffffff;
@@ -432,18 +442,17 @@ white-space: nowrap;
 
 
 .grid{
-    margin: auto;
-        box-sizing: border-box;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
 position: absolute;
    right: 0;
-    top: 18vh;
+   top: 18vh;
 width: 100vw;
 height: 100vh;
-    overflow: scroll;
-    z-index: -1;
+background-color: rgb(251, 253, 252);
+    overflow-x: hidden;
 }
 
 .title-1 {
@@ -821,14 +830,40 @@ width: 70vw;
 .interview-title-1{
     padding-top: 4rem;
     padding-bottom: 1rem;
+    width: 80vw;
 }
+
+.img{
+    position: relative;
+    margin: auto;
+left: 0;
+
+}
+
+ #manifesto{
+    position: relative;
+height: 80vh;
+width: 70vw;    
+left: 0;
+display: block;
+ }
+
+ .img sub{
+position: relative;
+padding-top: 2rem;
+line-height: 0.8rem;
+float: left;
+width: 40vw;
+ }
 .bio-1{
     font-family: 'Xanh Mono', monospace;
     font-size: 18px;
     font-weight: normal;
+    padding-top: 10rem;
     padding-bottom: 10rem;
     line-height: 1.4rem;
     letter-spacing: -0.3px;
+    width: 90vw;
 }
 
 .bio-1 i{
@@ -845,21 +880,17 @@ letter-spacing: -0.3px;
     width: 7rem;
 position: relative;
 padding-bottom: 4rem;
-}
-
-.author sub{
-display: block;
-box-sizing: border-box;
-margin: auto;
-position: relative;
+font-family: 'jetbrains_monoregular', monospace;
+font-style: normal;
+font-weight: normal;
 text-align: left;
-color: #6d6d6d;
-font-size: 9px;
-line-height: 0.7rem;
+font-size: 10px; 
+line-height: 0.8rem;
 }
 
 .interview-text-1{
     padding-bottom: 7.5rem;
+    width: 90vw;
 }
 
 .interview-text-1 b i{
@@ -879,10 +910,12 @@ line-height: 0.7rem;
     line-height: 1.7rem;
     text-indent: 1rem;
     padding-bottom: 8rem;
+    width: 90vw;
     }
 
     .contact{
         padding-bottom: 3rem;
+        width: 90vw;
     }
 
     .section-1, .section-2, .section-3{
@@ -943,7 +976,14 @@ line-height: 0.7rem;
             position: relative;
             padding: 2rem;
           }
-        
+          #book-thumbnail-square{
+            height: 12rem;
+            width: 12rem;
+            display: block;
+            margin: auto;
+            position: relative;
+            padding: 7rem;
+          }
         
           .book-title sub{
             position: relative;
@@ -1097,4 +1137,46 @@ top: -13rem;
     width: 100vw;
     height: 1px;
     background-color: #000000
+}
+
+.caption{
+    position: relative;
+}
+
+.experience-text-1{
+    width: 90vw;
+    position: relative;
+    padding-top: 5rem;
+}
+
+#zinesjpg{
+    position: relative;
+    padding-top: 1rem;
+    margin: auto;
+    width: 90vw;
+    height: 50vh;
+}
+
+#EX-1{
+    position: relative;
+    padding-top: 1rem;
+    margin: auto;
+    width: 28rem;
+    height: 25rem;  
+}
+
+#EX-2{
+    position: relative;
+    padding-top: 1rem;
+    margin: auto;
+    width: 27rem;
+    height: 27rem; 
+}
+
+#EX-3{
+    position: relative;
+    padding-top: 1rem;
+    margin: auto;
+    width: 27rem;
+    height: 27rem;  
 }
