--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -379,7 +379,7 @@ z-index: 2;
 .marquee {
     height: 25px;
     position: fixed;
-margin-top: 18rem; 
+top: 18rem; 
 left: 0;   
 background: #000000;
     color: #ffffff;
