--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -454,6 +454,8 @@ width: 100vw;
 height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
+        overflow-y: visible;
+
 }
 
 .title-1 {
