--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -451,7 +451,7 @@ position: absolute;
    right: 0;
    top: 18vh;
 width: 100vw;
-height: 100vh;
+height: 75rem;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
         overflow-y: visible;
