--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -433,10 +433,9 @@ white-space: nowrap;
 }
 
 @keyframes scroll {
-    from { transform: translateX(0); }
-    to { transform: translateX(calc(100% ));
-     }
-  }
+  from { transform: translateX(0); }
+  to { transform: translateX(calc(-55% - 1rem)); }
+}
 
 
 
