--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -435,11 +435,12 @@ white-space: nowrap;
 .grid{
     box-sizing: border-box;
     display: grid;
+    margin: auto;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
 position: absolute;
    right: 0;
-   top: 10vh;
+   top: -10vh;
 width: 100vw;
 height: 75rem;
 background-color: rgb(251, 253, 252);
