--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -438,9 +438,9 @@ white-space: nowrap;
     margin: auto;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
-position: absolute;
+position: relative;
    right: 0;
-   top: -10vh;
+   top: -5rem;
 width: 100vw;
 height: 75rem;
 background-color: rgb(251, 253, 252);
