--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -283,7 +283,7 @@ display: block;
     box-sizing: border-box;
     width: 100vw;
     background-color: white;
-    height: 14vh;
+    height: 8rem;
 }
 
 .title {
