--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -180,7 +180,7 @@ body{
     overflow-x: hidden;
 }
 .wrapper{
-    margin-top: 0;
+    margin-right: 1.2rem;
     min-width: 100vw;
     min-height: 100vh;
     overflow-x: hidden;
@@ -283,15 +283,14 @@ display: block;
     box-sizing: border-box;
     width: 100vw;
     background-color: white;
-    height: 8rem;
+    height: 14vh;
 }
 
 .title {
     margin: auto;
-    display: block;
     padding-top: 1.5rem;
     padding-left: 1.5rem;
-    position: relative;
+    position: fixed;
     float: left;
     font-family: 'goozetteregular';
     font-style: normal;
@@ -304,7 +303,7 @@ display: block;
     }
 
 .header-text-gardens{
-position: relative;
+position: fixed;
 margin-left: 1.6rem;
 display: block;
 box-sizing: border-box;
@@ -377,7 +376,7 @@ z-index: 2;
 .marquee {
     height: 25px;
     position: fixed;
-top: 4rem; 
+margin-top: 12vh; 
 left: 0;   
 background: #000000;
     color: #ffffff;
@@ -397,17 +396,10 @@ background: #000000;
       font-size: 10px; 
   white-space: nowrap;
   will-change: transform;
-  animation: scroll 30s linear infinite;
+  animation: scroll 10s linear infinite;
   animation-direction: reverse;
+  width: 100vw;
 }
-@keyframes scroll {
-  from { transform: translateX(0); }
-  to { transform: translateX(calc(-70% - 1rem)); }
-}
-
-
-
-
 
 .marquee-bottom{
 display: block;
@@ -436,7 +428,7 @@ white-space: nowrap;
 
 @keyframes scroll {
     from { transform: translateX(0); }
-    to { transform: translateX(calc(-66% ));
+    to { transform: translateX(calc(-150% ));
      }
   }
 
@@ -445,20 +437,16 @@ white-space: nowrap;
 .grid{
     box-sizing: border-box;
     display: grid;
-    margin: auto;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 25vh 25vh 25vh;
-position: relative;
+position: absolute;
    right: 0;
-   top: -5rem;
+   top: 18vh;
 width: 100vw;
-height: 75rem;
+height: 100vh;
 background-color: rgb(251, 253, 252);
-overflow-y: scroll;
-
+    overflow-x: hidden;
 }
-
-
 
 .title-1 {
     margin: auto;
