--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -376,7 +376,7 @@ z-index: 2;
 .marquee {
     height: 25px;
     position: fixed;
-margin-top: 12vh; 
+margin-top: 13vh; 
 left: 0;   
 background: #000000;
     color: #ffffff;
@@ -513,11 +513,11 @@ height: 25vh;
 .about-mobile{
     display: block;
     width: 40vw;
-    height: 25vh;
+    height: 6rem;
     position: relative;
     margin: auto;
     padding-bottom: 5px;
-    bottom: -10px;
+    bottom: 5px;
     right: 0;
     border: #000000 1px solid;
     background-color: #8bee84;
@@ -526,12 +526,14 @@ height: 25vh;
 
 .about-mobile p{
     margin: auto;
-    padding-top: 4rem;
+    padding-top: 2rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
     position: relative;
     text-align: center;
     font-family: 'goozetteregular', sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.7rem;
+    font-size: 18px;
+    line-height: 1.5rem;
     color: #000000;
 }
 
