--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -438,10 +438,10 @@ white-space: nowrap;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 50% 50%;    
-    grid-template-rows: 25vh 25vh 25vh;
+    grid-template-rows: 25% 25% 25%;
 position: absolute;
    right: 0;
-   top: 18vh;
+   top: 8rem;
 width: 100vw;
 height: 100vh;
 background-color: rgb(251, 253, 252);
