--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -438,13 +438,12 @@ white-space: nowrap;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 50% 50%;    
-    grid-template-rows: 25% 25% 25%;
+    grid-template-rows: 12rem 12rem 12rem;
 position: absolute;
    right: 0;
    top: 8rem;
 width: 100vw;
 height: 100vh;
-background-color: rgb(251, 253, 252);
     overflow-x: hidden;
 }
 
