--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -446,6 +446,7 @@ width: 100vw;
 height: 100vh;
 background-color: rgb(251, 253, 252);
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .title-1 {
