--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -439,6 +439,7 @@ white-space: nowrap;
     grid-template-rows: 10rem 10rem 10rem;
 position: absolute;
    right: 0;
+    top: 1.5rem;
     bottom: 3rem;
 width: 100vw;
 height: 100vh;
