--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -437,7 +437,7 @@ white-space: nowrap;
     display: grid;
     grid-template-columns: 50% 50%;    
     grid-template-rows: 10rem 10rem 10rem;
-position: relative;
+position: absolute;
    right: 0;
     margin-top: 4rem;
 width: 100vw;
