--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -439,9 +439,9 @@ white-space: nowrap;
     grid-template-rows: 10rem 10rem 10rem;
 position: absolute;
    right: 0;
-    margin-top: 4rem;
+  top: 5rem;
 width: 100vw;
-height: 100vh;
+height: 75vh;
 }
 
 .title-1 {
