--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -526,6 +526,7 @@ height: 10rem
     padding-top: 2rem;
     padding-right: 2rem;
     padding-left: 2rem;
+    padding-bottom: 2rem;
     position: relative;
     text-align: center;
     font-family: 'goozetteregular', sans-serif;
